--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -25,16 +25,21 @@ time = {version = "=0.3.21", features = ["formatting", "macros"]}
 
 parking_lot = "=0.11.2"
 
-pty-process = "=0.4.0"
+# pty-process = { version = "=0.4.0", features = ["async"] }
+pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }
+
 nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }
 lazy_static = "=1.4.0"
 
 crossterm = { version = "=0.27.0", features = ["event-stream", "events"] }
 termwiz = "=0.20.0"
+term_size = "=0.3.2"
 
 async-process = "=1.7.0"
 
 portable-pty = "=0.8.1"
+
+tokio-pty-process = "=0.4.0"
 
 # headers = "=0.3.8"
 axum = {version = "=0.6.20", features = ["ws", "headers"]}
@@ -46,6 +51,11 @@ async-trait = "=0.1.73"
 once_cell = "=1.18.0"
 tokio-tungstenite = "=0.20.0"
 pretty-hex = "=0.3.0"
+
+# 试验性
+# snafu = "=0.7.5"
+# snafu = { version = "0.5", features = ["futures-01"] }
+
 
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
