--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -17,6 +17,7 @@ futures="=0.3.28"
 anyhow = "=1.0.71"
 bytes = "=1.1.0"
 clap = { version = "=4.1.6", features = ["derive", "env"] }
+url = "=2.4.0"
 
 tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
 tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
