--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -26,8 +26,8 @@ time = {version = "=0.3.21", features = ["formatting", "macros"]}
 
 parking_lot = "=0.11.2"
 
-# pty-process = { version = "=0.4.0", features = ["async"] }
-pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }
+pty-process = { version = "=0.4.0", features = ["async"] }
+# pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }
 
 nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }
 lazy_static = "=1.4.0"
