--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -45,6 +45,8 @@ tokio-pty-process = "=0.4.0"
 # headers = "=0.3.8"
 axum = {version = "=0.6.20", features = ["ws", "headers"]}
 tower-http = {version = "=0.4.3", default-features = false, features = ["full"]}
+reqwest = { version = "=0.11.20", features = ["json"] }
+serde = { version = "=1.0.186", features = ["derive", "serde_derive"] }
 
 protobuf = { version = "=3.2.0", features = ["with-bytes"] }
 protobuf-json-mapping = "=3.2.0"
