--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -44,15 +44,16 @@ tokio-pty-process = "=0.4.0"
 
 # headers = "=0.3.8"
 axum = {version = "=0.6.20", features = ["ws", "headers"]}
+axum-server = { version = "=0.5.1", features = ["tls-rustls"] }
 tower-http = {version = "=0.4.3", default-features = false, features = ["full"]}
 reqwest = { version = "=0.11.20", features = ["json"] }
+tokio-tungstenite = { version = "=0.20.0", features = ["rustls"] }
 serde = { version = "=1.0.186", features = ["derive", "serde_derive"] }
 
 protobuf = { version = "=3.2.0", features = ["with-bytes"] }
 protobuf-json-mapping = "=3.2.0"
 async-trait = "=0.1.73"
 once_cell = "=1.18.0"
-tokio-tungstenite = "=0.20.0"
 pretty-hex = "=0.3.0"
 
 # 试验性
