--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -43,11 +43,13 @@ portable-pty = "=0.8.1"
 tokio-pty-process = "=0.4.0"
 
 # headers = "=0.3.8"
-axum = {version = "=0.6.20", features = ["ws", "headers"]}
+axum = {version = "=0.6.20", features = ["ws"]}
 axum-server = { version = "=0.5.1", features = ["tls-rustls"] }
 tower-http = {version = "=0.4.3", default-features = false, features = ["full"]}
-reqwest = { version = "=0.11.20", features = ["json"] }
-tokio-tungstenite = { version = "=0.20.0", features = ["rustls"] }
+reqwest = { version = "=0.11.20", features = ["json", "rustls-tls-webpki-roots"] }
+tokio-tungstenite = { version = "=0.20.0", features = ["rustls-tls-webpki-roots"] }
+
+
 serde = { version = "=1.0.186", features = ["derive", "serde_derive"] }
 
 protobuf = { version = "=3.2.0", features = ["with-bytes"] }
