--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -26,21 +26,21 @@ time = {version = "=0.3.21", features = ["formatting", "macros"]}
 
 parking_lot = "=0.11.2"
 
-pty-process = { version = "=0.4.0", features = ["async"] }
-# pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }
+
 
 nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }
 lazy_static = "=1.4.0"
 
-crossterm = { version = "=0.27.0", features = ["event-stream", "events"] }
-termwiz = "=0.20.0"
 term_size = "=0.3.2"
+crossterm = { version = "=0.27.0", features = ["event-stream", "events"] }
 
-async-process = "=1.7.0"
+pty-process = { version = "=0.4.0" }
+# pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }
 
-portable-pty = "=0.8.1"
-
-tokio-pty-process = "=0.4.0"
+# termwiz = "=0.20.0"
+# async-process = "=1.7.0"
+# portable-pty = "=0.8.1"
+# tokio-pty-process = "=0.4.0"
 
 # headers = "=0.3.8"
 axum = {version = "=0.6.20", features = ["ws"]}
