--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -15,7 +15,7 @@ rustls = "=0.21.6"
 
 futures="=0.3.28"
 anyhow = "=1.0.71"
-bytes = "=1.1.0"
+bytes = "=1.4.0"
 clap = { version = "=4.1.6", features = ["derive", "env"] }
 url = "=2.4.0"
 
@@ -57,6 +57,12 @@ protobuf-json-mapping = "=3.2.0"
 async-trait = "=0.1.73"
 once_cell = "=1.18.0"
 pretty-hex = "=0.3.0"
+
+thiserror = "=1.0.47"
+json5 = "=0.4.1"
+shadowsocks = "=1.15.4"
+shadowsocks-service = { version = "=1.15.4", features = ["local", "local-socks4"] }
+byte_string = "=1.0.0"
 
 # 试验性
 # snafu = "=0.7.5"
