fix build docker workflows

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build Docker image
       run: |
         cd rtun
-        cargo run --release
+        cargo build --release
         cd docker/build 
         docker build -t ubuntu-rtun .
 
