fix build docker workflows

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         cd rtun
         cargo build --release
-        cd docker/build 
+        cd ../docker/build 
         docker build -t ubuntu-rtun .
 
     - name: Log in to Docker Hub
