--- a/.github/workflows/build-run.yml
+++ b/.github/workflows/build-run.yml
@@ -17,5 +17,5 @@ jobs:
       run: |
         cd rtun
         echo ${{ secrets.MY_CONN_URL }}
-        cargo run --release --bin rtun -- agent pub "${{ secrets.MY_CONN_URL }}" --agent rtun
+        cargo run --release --bin rtun -- agent pub "${{ secrets.MY_CONN_URL }}" --agent rtun --expire_in 60
 
