--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -46,7 +46,7 @@ pty-process = { version = "=0.4.0" }
 axum = {version = "=0.6.20", features = ["ws"]}
 axum-server = { version = "=0.5.1", features = ["tls-rustls"] }
 tower-http = {version = "=0.4.3", default-features = false, features = ["full"]}
-reqwest = { version = "=0.11.20", features = ["json", "rustls-tls-webpki-roots"] }
+reqwest = { version = "=0.11.20", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
 tokio-tungstenite = { version = "=0.20.0", features = ["rustls-tls-webpki-roots"] }
 
 
