--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Push Docker image
       run: |
-        TAG_VER=$(date "+^C%m%d.%H%M%S").${REPO_GIT_HASH:0:7}
+        TAG_VER=$(date "+%Y%m%d.%H%M%S").${REPO_GIT_HASH:0:7}
         echo "TAG_VER=$TAG_VER"
         docker tag ubuntu-rtun simonfucn/ubuntu-rtun:$TAG_VER
         docker push simonfucn/ubuntu-rtun:$TAG_VER
