support version; support shell env

--- a/.github/workflows/build-run.yml
+++ b/.github/workflows/build-run.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Run
       run: |
         cd rtun
-        echo ${{ secrets.MY_CONN_URL_DEV }}
-        cargo run --release --bin rtun -- agent pub "${{ secrets.MY_CONN_URL_DEV }}" --agent rtun --expire_in 240
+        echo ${{ secrets.MY_RTUN_URL_DEV }}
+        cargo run --release --bin rtun -- agent pub "${{ secrets.MY_RTUN_URL_DEV }}" --agent rtun --expire_in 240
 
