--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rtun"
-version = "0.1.0"
+# version = "0.1.0"
+version.workspace = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -79,4 +80,4 @@ chrono = "=0.4.26"
 # protobuf-codegen-pure = "=2"
 # protobuf-codegen = "=2.27.1"
 protobuf-codegen = "=3.2.0"
-
+app_version ={ path = "/Users/simon/simon/src/rtun/app_version" }
