--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -75,7 +75,7 @@ chrono = "=0.4.26"
 # snafu = { version = "0.5", features = ["futures-01"] }
 
 tokio_kcp = "=0.9.6"
-# kcp = "=0.5.3"
+kcp = "=0.5.3"
 yamux = "=0.12.0"
 tokio-yamux = "=0.3.8"
 stun_codec = "=0.3.2"
@@ -84,6 +84,13 @@ rand = "=0.8.5"
 # pin-project-lite = "=0.2.13"
 webrtc-ice = "=0.9.1"
 webrtc-util = "=0.7.0"
+webrtc-dtls = "=0.7.2"
+crc32c = "=0.6.4"
+
+quinn = "=0.10.2"
+rcgen = "=0.11.1"
+if-watch = { version = "=3.0.1", features = ["tokio"] }
+combine = "=4.6.6"
 
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
