--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -89,6 +89,7 @@ webrtc-dtls = "=0.7.2"
 crc32c = "=0.6.4"
 
 quinn = "=0.10.2"
+quinn-proto = "=0.10.2"
 rcgen = "=0.11.1"
 if-watch = { version = "=3.0.1", features = ["tokio"] }
 combine = "=4.6.6"
@@ -96,6 +97,7 @@ combine = "=4.6.6"
 
 dialoguer = { version = "=0.10.4", features = ["history", "completion"] }
 console = "=0.15.7"
+indicatif = "=0.17.6"
 
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
