--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -99,6 +99,8 @@ dialoguer = { version = "=0.10.4", features = ["history", "completion"] }
 console = "=0.15.7"
 indicatif = "=0.17.6"
 
+indexmap = "=2.0.2"
+
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
 # protobuf-codegen-pure = "=2"
