--- a/.github/workflows/build-directly.yml
+++ b/.github/workflows/build-directly.yml
@@ -26,6 +26,6 @@ jobs:
         cd run-rtun
         docker run --rm simonfucn/ubuntu-rtun cat /usr/bin/rtun > ./rtun
         chmod +x ./rtun
-        ./rtun agent pub "${{ secrets.MY_RTUN_URL_DEV }}" --agent mydocker --expire_in 240 
+        RUST_LOG=rtun=debug ./rtun agent pub "${{ secrets.MY_RTUN_URL_DEV }}" --agent mydocker --expire_in 240 
 
 
