--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -110,6 +110,7 @@ console = "=0.15.7"
 indicatif = "=0.17.6"
 
 indexmap = "=2.0.2"
+regex = "=1.10.2"
 
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
