--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -34,7 +34,9 @@ url = "=2.4.0"
 tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
 tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
 tracing-appender = "=0.2.2"
-time = {version = "=0.3.21", features = ["formatting", "macros"]}
+# time = {version = "=0.3.21", features = ["formatting", "macros"]}
+time = {version = "=0.3.36", features = ["formatting", "macros"]}
+socket2 = "=0.5.7"
 
 parking_lot = "=0.11.2"
 
@@ -62,7 +64,8 @@ reqwest = { version = "=0.11.20", default-features = false, features = ["json", 
 tokio-tungstenite = { version = "=0.20.0", features = ["rustls-tls-webpki-roots"] }
 
 
-serde = { version = "=1.0.186", features = ["derive", "serde_derive"] }
+serde = { version = "=1.0.195", features = ["derive", "serde_derive"] }
+serde_json = "=1.0.111"
 
 protobuf = { version = "=3.2.0", features = ["with-bytes"] }
 protobuf-json-mapping = "=3.2.0"
