--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -114,6 +114,7 @@ indicatif = "=0.17.6"
 
 indexmap = "=2.0.2"
 regex = "=1.10.2"
+crc = "=3.2.1"
 
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
