--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -30,7 +30,7 @@ bytes = "=1.4.0"
 clap = { version = "=4.1.6", features = ["derive", "env"] }
 url = "=2.4.0"
 
-tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
+tracing = { version = "=0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
 tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
 tracing-appender = "=0.2.2"
 # time = {version = "=0.3.21", features = ["formatting", "macros"]}
@@ -72,7 +72,7 @@ async-trait = "=0.1.73"
 once_cell = "=1.18.0"
 pretty-hex = "=0.3.0"
 
-thiserror = "=1.0.47"
+thiserror = "=1.0.69"
 json5 = "=0.4.1"
 shadowsocks = "=1.15.4"
 shadowsocks-service = { version = "=1.15.4", features = ["local", "local-socks4"] }
@@ -115,6 +115,8 @@ indexmap = "=2.0.2"
 regex = "=1.10.2"
 crc = "=3.2.1"
 fast-socks5 = "=0.9.6"
+
+surge-ping = "=0.8.1"
 
 [build-dependencies]
 # prost-build = { version = "=0.9.0" }
