--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,27 @@ jobs:
         cp target/x86_64-unknown-linux-musl/release/rtun artifacts/
         tar -czvf artifacts.tar.gz -C artifacts .
 
+    - name: Check if Release exists
+    id: check_release
+    run: |
+        if gh release view ${{ github.ref_name }}; then
+        echo "release_exists=true" >> $GITHUB_ENV
+        else
+        echo "release_exists=false" >> $GITHUB_ENV
+        fi
+
+    - name: Create Release
+    if: env.release_exists == 'false'
+    id: create_release
+    uses: actions/create-release@v1
+    with:
+        tag_name: ${{ github.ref_name }}
+        release_name: ${{ github.ref_name }}
+        body: "Auto-generated release"
+        draft: false
+        prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}   
+        
     # 上传编译的可执行文件到 Release
     - name: Upload Release Assets
       uses: actions/upload-release-asset@v1
@@ -50,19 +71,20 @@ jobs:
         asset_name: release-artifacts.tar.gz
         asset_content_type: application/gzip
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
+#   release:
+#     needs: build
+#     runs-on: ubuntu-latest
 
-    steps:
-    # 创建 GitHub Release
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: false
+#     steps:
+#     # 创建 GitHub Release
+#     - name: Create Release
+#       id: create_release
+#       uses: actions/create-release@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         tag_name: ${{ github.ref_name }}
+#         release_name: Release ${{ github.ref_name }}
+#         draft: false
+#         prerelease: false
+
