--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,34 +11,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 检出代码
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    #   # 检出代码
+    #   - name: Checkout Code
+    #     uses: actions/checkout@v3
 
-      # 设置 Docker 缓存
-      - name: Cache Docker Layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/docker-cache
-          key: ${{ runner.os }}-docker-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-docker-
+    #   # 设置 Docker 缓存
+    #   - name: Cache Docker Layers
+    #     uses: actions/cache@v3
+    #     with:
+    #       path: /tmp/docker-cache
+    #       key: ${{ runner.os }}-docker-${{ github.sha }}
+    #       restore-keys: |
+    #         ${{ runner.os }}-docker-
 
-      # 使用 clux/muslrust 编译
-      - name: Build with clux/muslrust
-        run: |
-          docker run --rm \
-            -v "$(pwd)":/volume \
-            -w /volume \
-            "clux/muslrust:1.83.0-stable" cargo build --release
+    #   # 使用 clux/muslrust 编译
+    #   - name: Build with clux/muslrust
+    #     run: |
+    #       docker run --rm \
+    #         -v "$(pwd)":/volume \
+    #         -w /volume \
+    #         "clux/muslrust:1.83.0-stable" cargo build --release
 
-      # 打包编译结果
+    #   # 打包编译结果
+    #   - name: Prepare Artifact
+    #     run: |
+    #       mkdir -p artifacts
+    #       cp target/x86_64-unknown-linux-musl/release/rtun artifacts/
+    #       tar -czvf artifacts.tar.gz -C artifacts .
+
       - name: Prepare Artifact
         run: |
-          mkdir -p artifacts
-          cp target/x86_64-unknown-linux-musl/release/rtun artifacts/
-          tar -czvf artifacts.tar.gz -C artifacts .
-
+          touch artifacts.tar.gz
+        
       # 检查 Release 是否存在
       - name: Check if Release exists
         id: check_release
@@ -54,13 +58,15 @@ jobs:
         if: env.release_exists == 'false'
         id: create_release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
           release_name: ${{ github.ref_name }}
           body: "Auto-generated release"
           draft: false
           prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
+        #   token: ${{ secrets.GITHUB_TOKEN }}
 
       # 上传编译的可执行文件到 Release
       - name: Upload Release Assets
