--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    #   # 检出代码
-    #   - name: Checkout Code
-    #     uses: actions/checkout@v3
+      # 检出代码
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
     #   # 设置 Docker 缓存
     #   - name: Cache Docker Layers
