--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
             repo_token: ${{ secrets.GITHUB_TOKEN }}
             file: artifacts.tar.gz
             asset_name: mything
-            tag: ${{ github.ref }}
+            tag: nightly
             overwrite: true
             body: "This is my release text"
 
