--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Prepare Artifact
         run: |
-          touch artifacts.tar.gz
+          echo "hello" artifacts.txt
     
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
@@ -50,7 +50,7 @@ jobs:
             # A personal access token for the GitHub repository in which the release will be created and edited.
             # It is recommended to create the access token with the following scopes: `repo, user, admin:repo_hook`.
             repo_token: ${{ secrets.GITHUB_TOKEN }}
-            file: artifacts.tar.gz
+            file: artifacts.txt
             asset_name: mything
             tag: nightly
             overwrite: true
