--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
             token: ${{ secrets.GITHUB_TOKEN }}
             files: |
                 ./artifacts.txt
+            tag_name: test
 
 
     #   # 检查 Release 是否存在
