--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,8 @@ jobs:
             repository: simon-fu/tts-release
             # note you'll typically need to create a personal access token
             # with permissions to create releases in the other repo
-            token: ${{ secrets.GITHUB_TOKEN }}
+            # token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.TTS_REL_TOKEN }}
             files: |
                 ./artifacts.txt
             tag_name: test
