--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -52,8 +52,9 @@ jobs:
       - name: Upload output
         uses: actions/upload-artifact@v4
         with:
-          name: rtun-artifact-${{ matrix.runs-on }}
+          name: rtun-artifact-${{ matrix.TARGET }}
           path: ./rtun-${{ matrix.TARGET }}${{ env.BINARY_EXTENSION }}
+
   release:
     needs: build
     runs-on: ubuntu-latest
