--- a/rtun/Cargo.toml
+++ b/rtun/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 tokio = { version = "=1.42.0", features = ["full"] }
 tokio-util = {version = "=0.7.8", features = ["full"]}
 tokio-stream = { version = "=0.1.14", features = ["sync"] }
-rustls = "=0.21.6"
+rustls = { version = "=0.21.6", features = ["dangerous_configuration"] }
 
 tokio-rustls = "=0.24.1"
 rustls-pemfile = "=1.0.3"
