--- a/.github/workflows/build-manual-release.yml
+++ b/.github/workflows/build-manual-release.yml
@@ -28,18 +28,24 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
-          override: true
-          target: ${{ matrix.target }}
+          targets: ${{ matrix.target }}
+
+      - name: Install cross
+        uses: taiki-e/install-action@cross
+
+      - name: Show tool versions
+        shell: bash
+        run: |
+          rustc --version
+          cargo --version
+          cross --version
 
       - name: Build binary
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --bin rtun --locked --target=${{ matrix.target }}
+        shell: bash
+        run: |
+          cross build --release --bin rtun --locked --target=${{ matrix.target }}
 
       - name: Prepare artifact
         shell: bash
