--- a/.github/workflows/schedule-rtun11.yml
+++ b/.github/workflows/schedule-rtun11.yml
@@ -47,6 +47,6 @@ jobs:
         echo RUST_LOG=$RUST_LOG
         echo AGENT_NAME=$AGENT_NAME
 
-        ./rtun-x86_64-unknown-linux-musl agent pub "${{ secrets.MY_RTUN1_URL }}" --agent $AGENT_NAME --expire_in 110 --secret ${{ secrets.MY_RTUN1_SECRET }} --quic-insecure
+        ./rtun-x86_64-unknown-linux-musl agent pub "${{ secrets.MY_RTUN1_URL }}" --agent $AGENT_NAME --expire_in 110 --secret ${{ secrets.MY_RTUN1_SECRET }} 
 
 
