--- a/.github/workflows/schedule-build-1.yml
+++ b/.github/workflows/schedule-build-1.yml
@@ -1,8 +1,10 @@
 name: Schedule build-rtun-1
 
 on:
-    schedule:
-        - cron:  '0 1,3,5,7,9,11,13,15,17,19,21,23 * * *'
+  # schedule:
+  #   - cron:  '0 1,3,5,7,9,11,13,15,17,19,21,23 * * *'
+  
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
