--- a/.github/workflows/schedule-build-2.yml
+++ b/.github/workflows/schedule-build-2.yml
@@ -1,8 +1,10 @@
 name: Schedule build-rtun-2
 
 on:
-    schedule:
-        - cron:  '0 0,2,4,6,8,10,12,14,16,18,20,22 * * *'
+  # schedule:
+  #   - cron:  '0 0,2,4,6,8,10,12,14,16,18,20,22 * * *'
+  
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
