ci: rename dev auto build to nightly, trigger on main push

--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -1,12 +1,14 @@
-name: Build Release
+name: Build Nightly
 
 on:
-  workflow_dispatch: # 添加手动触发
+  workflow_dispatch: # 手动触发
   push:
-    # tags:
-    #   - 'v*' # 仅在推送标签时触发
     branches:
-      - dev  # 仅在推送到 dev 分支时触发
+      - main  # 仅在推送到 main 分支时触发
+
+concurrency:
+  group: nightly-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
